Embellishments, asset additions, vanishing inputs debugging

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PROGRESS</title>
+    <title>PROgress</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-face/1.0.1/font-face.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
@@ -19,7 +19,7 @@
     <!-- Navigation -->
     <div class="navbar">
         <div class="logo" data-navigate="home">
-            PROGRESS
+            PROgress
             <div class="logo-gleam"></div>
         </div>
         <div class="nav-items">
@@ -74,7 +74,7 @@
                 <br><br>
                 That, like all good things however unlikely, <span class="highlight-text" id="highlight6">It Can Be Done.</span>
                 <br><br>
-                <img src="assets/images/horse-emblem.png" alt="Whistlejacket emblem" class="horse-emblem">
+                <img src="assets/images/whistlejacket.png" alt="Whistlejacket emblem" class="horse-emblem">
             </div>
         </div>
     </div>
