New microinteractions, styling iterations

--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
             <div class="text-block">
                 <span class="highlight-text active">A political party beyond left and right.</span><br>
                 A workshop in which the future of Britain is being built.<br>
-                A partnership of the able. <br><br><br><br>
-                Perhaps you hate politics. <br>
-                Perhaps you've always felt you could govern better than politicians can. <br>
-                We think you're right. And we're here to put you, the voter, back in the driving seat. <br>
+                A partnership of the able.
             </div>
         </div>
     </div>
@@ -197,6 +194,7 @@
 
     <!-- JavaScript Files -->
     <script src="js/utils/helpers.js"></script>
+    <script src="js/components/sparkles.js"></script>
     <script src="js/components/navigation.js"></script>
     <script src="js/components/highlights.js"></script>
     <script src="js/components/vanishing-input.js"></script>
