--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
             <div class="text-block">
                 <span class="highlight-text active">A political party beyond left and right.</span><br>
                 A workshop in which the future of Britain is being built.<br>
-                A partnership of the able.
+                A partnership of the able. <br><br><br><br>
+                Maybe you hate politics.<br>
+                Maybe you think you think ordinary people could govern better than politicians do.<br>
+                We think you're right.<br><br><br> That's what Progress is - a party full of ordinary people, doing extraordinary things.
             </div>
         </div>
     </div>
